# PhysicsSimulation

./: .gitignore  CMakeLists.txt  Display.h  GLFWMain.cpp  GLFWWrapper.h  GraphicsBuffer.h  ModelData.h  Physics.h  PhysicsSimulation  README.md  Renderer.h  RigidModel.h  Shader.h  Simulation.h  SimulationDisplay.h  TestingGL.h  basic.shader  imgui.ini  linmath.h  lol.shader  main.cpp
math/: Matrix.h  MatrixOps.h  VectorOps.h
resources/outside/: conserve_energy_question.txt  conserve_energy_question_post.txt
resources/shaders/: axis.shader  basic.shader  basic_prev.shader  drawingNodeShader.shader  gridborders.shader  image.shader  triangle.shader
src/: Camera.cpp  Camera.h  Display.h  DrawingNode.cpp  DrawingNode.h  DrawingPane.cpp  DrawingPane.h  GraphicsBuffer.cpp  GraphicsBuffer.h  GridNode.cpp  GridNode.h  GridPane.cpp  GridPane.h  Image.cpp  Image.h  ImagePane.cpp  ImagePane.h  ModelData.cpp  ModelData.h  ModelGraphicsData.cpp  ModelGraphicsData.h  Node.cpp  Node.h  Pane.cpp  Pane.h  Physics.h  PhysicsSimulation.h  Renderer.cpp  Renderer.h  RigidBody.cpp  RigidBody.h  Shader.cpp  Shader.h  Simulation.h  SimulationDisplay.h  TriangleNode.cpp  TriangleNode.h  TrianglePane.cpp  TrianglePane.h  Window.cpp  (+5 more)
src/math/: Quaternion.h  QuaternionOps.h  Vector.h
